# tscp-solver

./: CMakeLists.txt  LICENCE  README.md  actions.c  actions.h  change_finder.c  change_finder.h  constructive_alg.c  constructive_alg.h  datatypes.c  datatypes.h  dot_printer.c  dot_printer.h  edge_heuristics.c  edge_heuristics.h  example_data.txt  experiments.c  experiments.h  heuristics.c  heuristics.h  local_search.c  local_search.h  main.c  min_flow.c  min_flow.h  objective.c  objective.h  operations.c  operations.h  output.c  output.h  parse_config.c  parse_config.h  parse_input.c  parse_input.h  random.c  random.h  simmulated_annealing.c  simmulated_annealing.h  solution_modifier.c  (+5 more)
data/: small_random_200_500.cfg  small_random_300_500.cfg
src/: change_finder.c  change_finder.h  datatypes.c  datatypes.h  dot_printer.c  main.c  objective.c  objective.h  operations.c  output.c  parse_input.c  parse_input.h  random.c  random.h  simmulated_annealing.c  simulated_annealing.c  tabu_search.c  test.c  test.h
